src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs-2.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/ex3-both-anon-regions-both-are-structs-2.rs:16:5
   |
LL | fn foo(mut x: Ref, y: Ref) {
   |        -----       - has type `Ref<'_, '1>`
   |        |
   |        has type `Ref<'_, '2>`
LL |     x.b = y.b; //~ ERROR lifetime mismatch
   |     ^^^^^^^^^ assignment requires that `'1` must outlive `'2`

error: aborting due to previous error

